<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/home_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/desc_background_image"
        android:scaleType="fitEnd"
        android:src="@drawable/home_screen" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:text="@string/play"
            android:textColor="@color/font_color"
            android:textSize="30sp" />

        <Button
            android:id="@+id/knots_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:text="@string/knots"
            android:textColor="@color/font_color"
            android:textSize="30sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3" />

    </LinearLayout>

</RelativeLayout>